--- a/css/all.css
+++ b/css/all.css
@@ -232,7 +232,7 @@ blockquote {
 
 
 /* margin: 0 auto 0 auto; */
-.containerX {
+.containerDelete {
 	background-color:#353535;
 	background-color: rgba(35, 35, 35, .6);
 	/* float:right; margin-left:300px; */
