--- a/css/all.css
+++ b/css/all.css
@@ -127,8 +127,11 @@ blockquote {
         opacity: .8;
         cursor: pointer;
     }
-    #play-buttonX:hover {
-        opacity: 1
+    #play-button:hover {
+        opacity: 1;
+    }
+    #play-button:hover a {
+    	text-decoration:none;
     }
     
     .mainTitle {
@@ -147,7 +150,7 @@ blockquote {
         opacity: .8;
     }
     .chapterTitle {
-    	position:fixed; left:0px; right:0px; text-align:center; margin-top:60px; color:#fff; font-size:24px
+    	position:fixed; left:0px; right:0px; text-align:center; margin-top:60px; color:#fff; font-size:32px
     	/*
     	margin-top:48px;
     	font-size:52px;
